applications/production/nginx/nginx-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.zech.dev`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
